--- a/package.json
+++ b/package.json
@@ -17,10 +17,16 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-full-screen": "^1.1.1",
+    "react-icons": "^5.3.0",
+    "react-image-gallery": "^1.3.0",
+    "react-rater": "^6.0.5",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.26.2",
     "react-slick": "^0.30.2",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "slides": "^0.0.0",
+    "tailwind": "^4.0.0",
+    "yet-another-react-lightbox": "^3.21.6"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
