--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,22 +1,70 @@
+altgraph==0.17.4
 annotated-types==0.6.0
 anyio==3.7.1
 asgiref==3.7.2
+attrs==24.2.0
+auto-py-to-exe==2.44.1
+boto3==1.35.39
+botocore==1.35.39
+bottle==0.13.1
+bottle-websocket==0.2.9
 certifi==2023.11.17
+cffi==1.17.0
+charset-normalizer==3.3.2
 colorama==0.4.6
 distro==1.8.0
 Django==5.0.7
 django-cors-headers==4.4.0
 django-rest-framework==0.1.0
+django-storages==1.14.4
 djangorestframework==3.15.2
+Eel==0.17.0
+future==1.0.0
+gevent==24.2.1
+gevent-websocket==0.10.1
+git-filter-repo==2.45.0
+greenlet==3.1.0
 h11==0.14.0
 httpcore==1.0.2
 httpx==0.25.1
 idna==3.4
+jmespath==1.0.1
 openai==1.3.5
+outcome==1.3.0.post0
+packaging==24.1
+pefile==2024.8.26
+pillow==10.4.0
+pycparser==2.22
 pydantic==2.5.1
 pydantic_core==2.14.3
+pyenchant==3.2.2
+pyinstaller==6.10.0
+pyinstaller-hooks-contrib==2024.8
+pyparsing==3.1.4
+PySocks==1.7.1
+pystyle==2.9
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+pywin32-ctypes==0.2.3
+requests==2.32.3
+s3transfer==0.10.3
+selenium==4.11.2
+six==1.16.0
 sniffio==1.3.0
+sortedcontainers==2.4.0
 sqlparse==0.4.4
+tls-client==1.0.1
 tqdm==4.66.1
-typing_extensions==4.8.0
+trio==0.26.2
+trio-websocket==0.11.1
+typing_extensions==4.12.2
 tzdata==2023.3
+undetected-chromedriver==3.5.3
+urllib3==2.2.2
+webdriver-manager==4.0.2
+websocket-client==1.8.0
+websockets==12.0
+whichcraft==0.6.1
+wsproto==1.2.0
+zope.event==5.0
+zope.interface==7.0.3
