--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "axios": "^1.7.7",
     "js-cookie": "^3.0.5",
     "react": "^18.3.1",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.3.1",
     "react-full-screen": "^1.1.1",
     "react-icons": "^5.3.0",
